[package]
name = "decentnet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skynet"
path = "bin/main.rs"

[[bin]]
name = "update-bindings"
path = "update.rs"

[lib]
name = "decentnet"
crate-type = ["cdylib", "lib"]

[build-dependencies]
prost-build = "0.12"
# ffi-gen = { version = "0.1.13" }

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.5"
clap = "3"
rkyv = "0.7"
void = "1"
either = "1"
log4rs = "1"
prost = "0.12"
tokio-tungstenite = "0.20"
tungstenite = "0.20"
# ffi-gen-macro = { version = "0.1.2" }
futures-lite = "2"
ping = "0.5"

[dependencies.libp2p]
git = "https://github.com/decentnetwork/rust-libp2p.git"
branch = "dnet"
default-features = false
features = ["decentnet", "yamux"]

[dev-dependencies]
tokio-test = "0.4"

[profile.beta]
inherits = "release"
opt-level = "s"
strip = true
lto = true

[profile.stable]
inherits = "release"
opt-level = "z"
strip = true
lto = true
panic = "abort"
